--- a/src/FluentBlazorApp/appsettings.json
+++ b/src/FluentBlazorApp/appsettings.json
@@ -1,8 +1,13 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=FluentBlazorDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information",
+      "Microsoft.AspNetCore.Components.Server.Circuits": "Information",
+      "Microsoft.AspNetCore.SignalR": "Information"
     }
   },
   "AllowedHosts": "*"
